--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -1,6 +1,6 @@
 # プロキシ先の指定
 # Nginxが受け取ったリクエストをバックエンドのpumaに送信
-upstream short_diarydocker {
+upstream short_diary_docker {
   server webapp:3000;
 }
 
@@ -22,7 +22,7 @@ server {
   keepalive_timeout 5;
 
   # リバースプロキシ関連の設定
-  location @webapp {
+  location @webapp  {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
