--- a/containers/nginx/Dockerfile
+++ b/containers/nginx/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx
 RUN rm -f /etc/nginx/conf.d/*
-ADD nginx.conf /etc/nginx/conf.d/short_diary_docker.conf
+COPY nginx.conf /etc/nginx/conf.d/short_diary_docker.conf
 CMD /usr/sbin/nginx -g 'daemon off;' -c /etc/nginx/nginx.conf
