--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     ports:
       - 3000:3000
     depends_on:
+      - selenium_chrome
       - db
     tty: true
     command: bundle exec puma -C config/puma.rb
