--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,6 @@ test:
 
 production:
   <<: *default
-  database: short_diary_docker_production
-  username: short_diary_docker
-  password: <%= ENV['SHORT_DIARY_DOCKER_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
