--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,13 @@ jobs:
           - BUNDLER_VERSION: 2.1.4
           - RAILS_ENV: test
       - image: circleci/mysql:8.0.22
+        command: |
+          mysqld --default-authentication-plugin=mysql_native_password
         environment:
           - MYSQL_ROOT_PASSWORD: password
           - MYSQL_USER: root
-
+          - MYSQL_ROOT_HOST: '%'
+          
     working_directory: ~/repo
     steps:
       - checkout
