--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -1,7 +1,7 @@
 # プロキシ先の指定
 # Nginxが受け取ったリクエストをバックエンドのpumaに送信
 upstream short_diary_docker {
-  server webapp:3000;
+  server unix:///short_diary_docker/tmp/sockets/puma.sock fail_timeout=0;
 }
 
 server {
