--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,11 +1,16 @@
 version: '3'
 services:
   webapp:
-    build: ./Dockerfile.production
+    build:
+      context: .
+      dockerfile: ./Dockerfile.production
     env_file:
       - ./environments/db.env
     volumes:
       - .:/short_diary_docker
+      - public-data:/short_diary_docker/public
+      - tmp-data:/short_diary_docker/tmp
+      - log-data:/short_diary_docker/log
     tty: true
     command: bundle exec puma -e production -C config/puma.rb
 
@@ -15,10 +20,21 @@ services:
       - ./environments/db.env
     volumes:
       - ./mysql-confd:/etc/mysql/conf.d
-
+    depends_on:
+      - webapp
+      
   nginx:
-    build: containers/nginx
+    build:
+      context: containers/nginx
+    volumes:
+      - public-data:/short_diary_docker/public
+      - tmp-data:/short_diary_docker/tmp
     ports:
       - 80:80
     depends_on:
       - webapp
+
+volumes:
+  public-data:
+  tmp-data:
+  log-data:
