--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.1'
 services:
   chrome:
     image: selenium/standalone-chrome
@@ -6,7 +6,8 @@ services:
       driver: none
 
   webapp:
-    build: .
+    build:
+      context: .
     env_file:
       - ./environments/db.env
     volumes:
@@ -17,6 +18,9 @@ services:
     depends_on:
       - chrome
     tty: true
+    secrets:
+      - ec2_ssh_key
+      - git_hub_ssh_key
     command: bundle exec puma -C config/puma.rb
 
   db:
@@ -39,6 +43,12 @@ services:
       - 80:80
     depends_on:
       - db
+
+secrets:
+  ec2_ssh_key:
+    file: ${SHORT_DIARY_SSH_KEY}
+  git_hub_ssh_key:
+    file: ${GIT_HUB_SSH}
 
 volumes:
   public-data:
