--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,8 +43,31 @@ jobs:
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
      # Run rspec in parallel
-      - ruby/rspec-test
       - ruby/rubocop-check
+      
+      # run tests!
+      - run:
+          name: run RSpec
+          command: |
+            mkdir /tmp/test-results
+            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
+              circleci tests split --split-by=timings)"
+
+
+# ③ここでRspecJunitFormatterというgemをインストールしていないとエラーになります。gemfileに記述しましょう。
+            bundle exec rspec \
+              --format progress \
+              --format RspecJunitFormatter \
+              --out /tmp/test-results/rspec.xml \
+              --format progress \
+              $TEST_FILES
+
+      # collect reports
+      - store_test_results:
+          path: /tmp/test-results
+      - store_artifacts:
+          path: /tmp/test-results
+          destination: test-results
 
 workflows:
   version: 2
