--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,8 @@
-version: 2
+version: 2.1
+
+orbs:
+  ruby: circleci/ruby@1.1.2
+
 jobs:
   build:
     docker:
@@ -6,7 +10,18 @@ jobs:
         environment:
           - BUNDLER_VERSION: 2.1.4
           - SELENIUM_DRIVER_URL: http://selenium_chrome:4444/wd/hub
-          - RAILS_ENV: 'test'
+    steps:
+      - checkout
+      - ruby/install-deps
+
+  test:
+    parallelism: 3
+    docker:
+      - image: circleci/ruby:2.7.2-node-browsers
+        environment:
+          - DB_HOST: 127.0.0.1
+          - RAILS_ENV: test
+          - BUNDLER_VERSION: 2.1.4
       - image: circleci/mysql:8.0
         command: |
           mysqld --default-authentication-plugin=mysql_native_password
@@ -18,52 +33,40 @@ jobs:
         name: chrome
 
     working_directory: ~/short_diary_circleci
-
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "Gemfile.lock" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-      - run:
-          name: install dependencies
-          command: |
-            gem install bundler -v 2.1.4
-            bundle install --jobs=4 --retry=3 --path vendor/bundle
-      - save_cache:
-          paths:
-            - ./vendor/bundle
-          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+      - ruby/install-deps
       - run: mv config/database.yml.ci config/database.yml
-      # Database setup
+      - run:
+          name: Wait for DB
+          command: dockerize -wait tcp://localhost:3306 -timeout 1m
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
-
-# rubocopを走らせる記述です。
-      - run:
-          name: Rubocop
-          command: bundle exec rubocop
-
-# rspecを走らせる記述です。
-      # run tests!
+      # Run rspec in parallel
+      - ruby/rubocop-check
       - run:
           name: run tests
           command: |
             mkdir /tmp/test-results
             TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
               circleci tests split --split-by=timings)"
-
             bundle exec rspec \
               --format progress \
-              --format RspecJunitFormatter \
               --out /tmp/test-results/rspec.xml \
               --format progress \
               $TEST_FILES
 
-      # collect reports
       - store_test_results:
           path: /tmp/test-results
       - store_artifacts:
           path: /tmp/test-results
           destination: test-results
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
