--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,6 @@ jobs:
       - image: selenium/standalone-chrome:latest
         name: chrome
 
-    working_directory: ~/short_diary_circleci
     steps:
       - checkout
       - ruby/install-deps
@@ -51,7 +50,7 @@ jobs:
             TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
               circleci tests split --split-by=timings)"
             bundle exec rspec \
-              --format progress \
+              --format RspecJunitFormatter \
               --out /tmp/test-results/rspec.xml \
               --format progress \
               $TEST_FILES
