--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,24 +43,8 @@ jobs:
       - run: bundle exec rake db:schema:load
       # Run rspec in parallel
       - ruby/rubocop-check
-      - run:
-          name: run tests
-          command: |
-            mkdir /tmp/test-results
-            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
-              circleci tests split --split-by=timings)"
-            bundle exec rspec \
-              --format RspecJunitFormatter \
-              --out /tmp/test-results/rspec.xml \
-              --format progress \
-              $TEST_FILES
-
-      - store_test_results:
-          path: /tmp/test-results
-      - store_artifacts:
-          path: /tmp/test-results
-          destination: test-results
-
+      - ruby/rubocop-check
+      
 workflows:
   version: 2
   build_and_test:
