--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,7 @@ test:
 
 production:
   <<: *default
-  database: <%= ENV['DATABASE_NAME'] %>
-  username: <%= ENV['DATABASE_USER'] %>
-  password: <%= ENV['DATABASE_PASSWORD'] %>
-  host: <%= ENV['DATABASE_HOST'] %>
+  database: <%= Rails.application.credentials.production_db[:database_name] %>
+  username: <%= Rails.application.credentials.production_db[:user_name] %>
+  password: <%= Rails.application.credentials.production_db[:password] %>
+  host: <%= Rails.application.credentials.production_db[:host_name] %>
