masterkey無しても起動するように修正

--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,7 @@ test:
 
 production:
   <<: *default
-  database: <%= Rails.application.credentials.production_db[:database_name] %>
-  username: <%= Rails.application.credentials.production_db[:user_name] %>
-  password: <%= Rails.application.credentials.production_db[:password] %>
-  host: <%= Rails.application.credentials.production_db[:host_name] %>
+  database: <%= Rails.application.credentials.dig(:production_db, :database_name) %>
+  username: <%= Rails.application.credentials.dig(:production_db, :user_name) %>
+  password: <%= Rails.application.credentials.dig(:production_db, :password) %>
+  host: <%= Rails.application.credentials.dig(:production_db, :host_name) %>
