--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@ jobs:
           - MYSQL_ROOT_HOST: '%'
       - image: selenium/standalone-chrome:latest
         name: chrome
+
     steps:
       - checkout
       - ruby/install-deps
@@ -52,8 +53,7 @@ jobs:
       - checkout
       - ruby/install-deps
       - add_ssh_keys:
-          fingerprints:
-            - "6c:67:71:c3:ae:79:b9:de:ad:5b:89:c1:c1:55:77:5f"
+          fingerprints: "6c:67:71:c3:ae:79:b9:de:ad:5b:89:c1:c1:55:77:5f"
       - deploy:
           name: Capistrano deploy
           command: bundle exec cap production deploy
