--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   ruby: circleci/ruby@1.1.2
+  aws-cli: circleci/aws-cli@1.3.2
 
 jobs:
   build:
@@ -52,6 +53,7 @@ jobs:
     steps:
       - checkout
       - ruby/install-deps
+      - aws-cli/install
       - add_ssh_keys:
           fingerprints: "6c:67:71:c3:ae:79:b9:de:ad:5b:89:c1:c1:55:77:5f"
       - deploy:
