--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,12 @@ version: 2.1
 
 orbs:
   ruby: circleci/ruby@1.1.2
+  node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@1.3.2
 
 jobs:
   build:
+    working_directory: ~/app
     docker:
       - image: circleci/ruby:2.7.2-node
         environment:
@@ -13,7 +15,9 @@ jobs:
     steps:
       - checkout
       - ruby/install-deps
-
+      - node/install-packages:
+          pkg-manager: yarn
+          cache-key: 'yarn.lock'
   test:
     parallelism: 3
     docker:
@@ -34,16 +38,15 @@ jobs:
     steps:
       - checkout
       - ruby/install-deps
+      - node/install-packages:
+          pkg-manager: yarn
+          cache-key: 'yarn.lock'
       - run: mv config/database.yml.ci config/database.yml
       - run:
           name: Wait for DB
           command: dockerize -wait tcp://localhost:3306 -timeout 1m
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
-      - run:
-          name: yarn Install
-          command: yarn install
-      - run: bundle exec bin/webpack
       # Run rspec in parallel
       - ruby/rubocop-check
       - ruby/rspec-test
@@ -56,6 +59,9 @@ jobs:
     steps:
       - checkout
       - ruby/install-deps
+      - node/install-packages:
+          pkg-manager: yarn
+          cache-key: 'yarn.lock'      
       - aws-cli/install
       - add_ssh_keys:
           fingerprints: "6c:67:71:c3:ae:79:b9:de:ad:5b:89:c1:c1:55:77:5f"
