--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - ruby/install-deps
       - node/install-packages:
           pkg-manager: yarn
-          cache-key: 'yarn.lock'
+          cache-path: 'yarn.lock'
   test:
     parallelism: 3
     docker:
@@ -40,7 +40,7 @@ jobs:
       - ruby/install-deps
       - node/install-packages:
           pkg-manager: yarn
-          cache-key: 'yarn.lock'
+          cache-path: 'yarn.lock'
       - run: mv config/database.yml.ci config/database.yml
       - run:
           name: Wait for DB
@@ -61,7 +61,7 @@ jobs:
       - ruby/install-deps
       - node/install-packages:
           pkg-manager: yarn
-          cache-key: 'yarn.lock'      
+          cache-path: 'yarn.lock'
       - aws-cli/install
       - add_ssh_keys:
           fingerprints: "6c:67:71:c3:ae:79:b9:de:ad:5b:89:c1:c1:55:77:5f"
