--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 
 orbs:
-  ruby: circleci/ruby@1.1.2
   node: circleci/node@4.1.0
+  ruby: circleci/ruby@1.1.2
   aws-cli: circleci/aws-cli@1.3.2
 
 jobs:
@@ -14,10 +14,11 @@ jobs:
           - BUNDLER_VERSION: 2.1.4
     steps:
       - checkout
-      - ruby/install-deps
       - node/install-packages:
           pkg-manager: yarn
           cache-path: 'yarn.lock'
+          with-cache: false
+      - ruby/install-deps
   test:
     parallelism: 3
     docker:
@@ -37,10 +38,11 @@ jobs:
         name: chrome
     steps:
       - checkout
-      - ruby/install-deps
       - node/install-packages:
           pkg-manager: yarn
           cache-path: 'yarn.lock'
+          with-cache: false
+      - ruby/install-deps
       - run: mv config/database.yml.ci config/database.yml
       - run:
           name: Wait for DB
@@ -57,11 +59,13 @@ jobs:
         environment:
           BUNDLER_VERSION: 2.1.4
     steps:
+    steps:
       - checkout
-      - ruby/install-deps
       - node/install-packages:
           pkg-manager: yarn
           cache-path: 'yarn.lock'
+          with-cache: false
+      - ruby/install-deps
       - aws-cli/install
       - add_ssh_keys:
           fingerprints: "6c:67:71:c3:ae:79:b9:de:ad:5b:89:c1:c1:55:77:5f"
