--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 
 orbs:
-  node: circleci/node@4.1.0
   ruby: circleci/ruby@1.1.2
+  node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@1.3.2
 
 jobs:
@@ -14,11 +14,11 @@ jobs:
           - BUNDLER_VERSION: 2.1.4
     steps:
       - checkout
+      - ruby/install-deps:
       - node/install-packages:
           pkg-manager: yarn
           cache-path: 'yarn.lock'
-          with-cache: false
-      - ruby/install-deps
+
   test:
     parallelism: 3
     docker:
@@ -41,7 +41,6 @@ jobs:
       - node/install-packages:
           pkg-manager: yarn
           cache-path: 'yarn.lock'
-          with-cache: false
       - ruby/install-deps
       - run: mv config/database.yml.ci config/database.yml
       - run:
@@ -63,7 +62,6 @@ jobs:
       - node/install-packages:
           pkg-manager: yarn
           cache-path: 'yarn.lock'
-          with-cache: false
       - ruby/install-deps
       - aws-cli/install
       - add_ssh_keys:
