--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - checkout
       - ruby/install-deps
+      - node/install-packages:
+          pkg-manager: yarn
+          cache-path: 'yarn.lock'
 
   test:
     parallelism: 3
@@ -34,11 +37,10 @@ jobs:
         name: chrome
     steps:
       - checkout
+      - ruby/install-deps
       - node/install-packages:
           pkg-manager: yarn
           cache-path: 'yarn.lock'
-          with-cache: false
-      - ruby/install-deps
       - run: mv config/database.yml.ci config/database.yml
       - run:
           name: Wait for DB
@@ -56,12 +58,11 @@ jobs:
           BUNDLER_VERSION: 2.1.4
     steps:
       - checkout
+      - ruby/install-deps
       - node/install-packages:
           pkg-manager: yarn
           cache-path: 'yarn.lock'
-          with-cache: false
       - aws-cli/install
-      - ruby/install-deps
       - add_ssh_keys:
           fingerprints: "6c:67:71:c3:ae:79:b9:de:ad:5b:89:c1:c1:55:77:5f"
       - deploy:
