--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
   aws-cli: circleci/aws-cli@1.3.2
 
 jobs:
-  build:
+  rubocop:
     docker:
       - image: circleci/ruby:2.7.2-node
         environment:
@@ -14,8 +14,9 @@ jobs:
     steps:
       - checkout
       - ruby/install-deps
+      - ruby/rubocop-check
 
-  test:
+  rspec:
     docker:
       - image: circleci/ruby:2.7.2-node
         environment:
@@ -43,8 +44,6 @@ jobs:
           command: dockerize -wait tcp://localhost:3306 -timeout 1m
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
-      # Run rspec in parallel
-      - ruby/rubocop-check
       - ruby/rspec-test
 
   deploy:
@@ -69,13 +68,13 @@ workflows:
   version: 2
   build_accept_deploy:
     jobs:
-      - build
-      - test:
+      - rubocop
+      - rspec:
           requires:
-            - build
+            - rubocop
       - deploy:
           requires:
-            - test
+            - rspec
           filters:
             branches:
               only: master
