--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
 
 workflows:
   version: 2
-  build_accept_deploy:
+  confirmation_passed_deploy:
     jobs:
       - rubocop
       - brakeman:
