--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,15 @@
 version: '3.1'
 services:
+  db:
+    image: mysql:8.0
+    env_file:
+      - ./environments/db.env
+    volumes:
+      - db-data:/var/lib/mysql
+    ports:
+      - 3306:3306
+    command: --default-authentication-plugin=mysql_native_password
+
   webapp:
     build:
       context: .
@@ -12,18 +22,8 @@ services:
       - log-data:/short_diary_docker/log
     tty: true
     command: bundle exec puma -C config/puma.rb
-
-  db:
-    image: mysql:8.0
-    env_file:
-      - ./environments/db.env
-    volumes:
-      - db-data:/var/lib/mysql
-      - ./mysql-confd:/etc/mysql/conf.d
-    ports:
-      - 3306:3306
     depends_on:
-      - webapp
+      - db
 
   nginx:
     build:
@@ -34,7 +34,7 @@ services:
     ports:
       - 80:80
     depends_on:
-      - db
+      - webapp
 
   chrome:
     image: selenium/standalone-chrome
