--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -7,7 +7,7 @@ upstream short_diary_docker {
 server {
   listen 80;
   # ドメインもしくはIPを指定
-  server_name 18.180.255.204 localhost;
+  server_name localhost;
 
   access_log /var/log/nginx/access.log;
   error_log  /var/log/nginx/error.log;
