--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     tty: true
     depends_on:
       - db
-    command: bash -c "yarn install && bundle exec puma -C config/puma.rb"
+    command: bash -c "yarn install && rails s"
 
   nginx:
     build:
